--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "lucide-react": "^0.562.0",
-    "framer-motion": "^12.25.0"
+    "framer-motion": "^12.25.0",
+    "vite": "^7.3.1",
+    "@vitejs/plugin-react": "^5.1.2",
+    "url": "^0.11.4",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
