--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^19.2.3",
     "lucide-react": "^0.562.0",
     "framer-motion": "^12.25.0",
+    "react-router-dom": "^6.22.3",
     "vite": "^7.3.1",
     "@vitejs/plugin-react": "^5.1.2",
     "url": "^0.11.4",
