--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "brutal_dev_portfolio",
+  "name": "wdezzo_dev_portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
